# advent2021

./: Cargo.toml  LICENSE  README.md
crates/day01/src/: main.rs
crates/day02/src/: main.rs
crates/day03/src/: main.rs
crates/day04/src/: main.rs
crates/day05/src/: main.rs
crates/day06/src/: main.rs
crates/day07/src/: main.rs
crates/day08/src/: main.rs
crates/day09/src/: main.rs
crates/day10/src/: main.rs
crates/day11/src/: main.rs
crates/day12/src/: main.rs
crates/day13/: Cargo.toml
crates/day13/src/: main.rs
crates/day14/: Cargo.toml
crates/day14/src/: main.rs
crates/day15/: Cargo.toml
crates/day15/src/: main.rs
crates/day16/src/: main.rs
crates/day17/: Cargo.toml
crates/day17/src/: main.rs
crates/utils/src/: lib.rs
