[package]
name = "advent2021"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]


[[bin]]
name = "day01"
path =  "crates/day01/src/main.rs"

[[bin]]
name = "day02"
path =  "crates/day02/src/main.rs"

[[bin]]
name = "day03"
path =  "crates/day03/src/main.rs"

[[bin]]
name = "day04"
path =  "crates/day04/src/main.rs"

[[bin]]
name = "day05"
path =  "crates/day05/src/main.rs"

