[package]
name = "advent2021"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
utils = { path = "crates/utils" }

[[bin]]
name = "day01"
path =  "crates/day01/src/main.rs"

[[bin]]
name = "day02"
path =  "crates/day02/src/main.rs"

[[bin]]
name = "day03"
path =  "crates/day03/src/main.rs"

[[bin]]
name = "day04"
path =  "crates/day04/src/main.rs"

[[bin]]
name = "day05"
path =  "crates/day05/src/main.rs"

[[bin]]
name = "day06"
path =  "crates/day06/src/main.rs"

[[bin]]
name = "day07"
path =  "crates/day07/src/main.rs"

[[bin]]
name = "day08"
path =  "crates/day08/src/main.rs"

[[bin]]
name = "day09"
path =  "crates/day09/src/main.rs"

[[bin]]
name = "day10"
path =  "crates/day10/src/main.rs"

[[bin]]
name = "day11"
path =  "crates/day11/src/main.rs"

[[bin]]
name = "day12"
path =  "crates/day12/src/main.rs"

[[bin]]
name = "day13"
path =  "crates/day13/src/main.rs"

[[bin]]
name = "day14"
path =  "crates/day14/src/main.rs"

